<resources>
    <string name="app_name">QL Thiết bị TDC</string>

    <string name="app_laucher">Quản lý thiết bị phòng thực hành tại TDC</string>

    <!--..............................Login Screen................................-->
    <string name="loginScreenTxtAccount">Tài khoản đăng nhập</string>
    <string name="loginScreenTxtPassword">Mật khẩu</string>
    <string name="loginScreenHintTxtAccount">Nhập tài khoản đăng nhập...</string>
    <string name="loginScreenHintTxtPassword">Nhập mật khẩu...</string>
    <string name="loginScreenBtnLoginText">Đăng nhập</string>
    <string name="loginScreenBtnForgetPaswordText">Quên mật khẩu</string>
    <string name="loginScreenBottomNaviHelpText">Trợ giúp</string>
    <string name="loginScreenBottomNaviExitText">Thoát</string>

    <!--.........................Home Screen............................... -->
    <string name="homeScreenNameScreen">Trang chủ</string>
    <string name="homeScreenTxtFunctionName">Tên chức năng</string>
    <!--.........................Report Malfunction Screen............................... -->
    <string name="ReportMulfuntionScreenNameScreen">Phiếu báo cáo sự cố</string>
    <string name="ReportMulfuntionScreen_CheckboxMouse">Hư chuột</string>
    <string name="ReportMulfuntionScreen_CheckboxKeyBoard">Bàn phím không hoạt động</string>
    <string name="ReportMulfuntionScreen_CheckboxPower">Mất Nguồn</string>
    <string name="ReportMulfuntionScreen_CheckboxScreen">Màn hình không hoạt động</string>
    <string name="ReportMulfuntionScreen_CheckboxSoftware">Không có chuột</string>
    <string name="ReportMulfuntionScreen_CheckboxAll">Tất cả</string>
    <string name="ReportMulfuntionScreen_EdittextHintOther">Khác (Vui lòng ghi rõ nội dung)...</string>
    <string name="ReportMulfuntionScreenButtonText">Hoàn tất</string>

    <!--........................Personal Screen.............................-->
    <string name="personalScreenFullName">Nguyễn Văn A</string>
    <string name="personalScreenRole">Giảng viên</string>
    <string name="personalScreenSettingProfile">Thiết lập tài khoản</string>
    <string name="personalScreenSettingNotifycation">Cài đặt thông báo</string>
    <string name="personalScreenTxtReviewsApp">Đánh giá ứng dụng</string>
    <string name="personalScreenTxtHelp">Trợ giúp</string>
    <string name="personalScreenTxtInformationApp">Thông tin ứng dụng</string>
    <string name="personalScreenTxtLanguage">Ngôn ngữ</string>
    <string name="personalScreenTxtLogout">Đăng xuất</string>

    <!--.........................Edit profile screen..........................-->
    <string name="editProfileScreenName">Chỉnh sửa tiểu sử</string>
    <string name="editProfileTextLabelAccount">Tên tài khoản</string>
    <string name="editProfileTextAccount">78GBA-GHFI-455</string>
    <string name="editProfileTextButtonChangePassword">Thay đổi mật khẩu</string>
    <string name="editProfileTextViewGenderLabel">Giới tính</string>
    <string name="editProfileSpinnerItemIsMale">Nam</string>
    <string name="editProfileSpinnerItemIsFemale">Nữ</string>
    <string name="editProfileSpinnerItemIsOther">Khác</string>
    <string name="editProfileTextViewAddressLabel">Địa chỉ</string>
    <string name="editProfileTextViewPhoneLabel">SĐT</string>
    <string name="editProfileTextViewEmailLabel">Email</string>
    <string name="editProfileTextViewEmailContent">nguyenvana@gmail.com</string>
    <string name="editProfileTextViewAddressContent">Thủ Đức, TP.HCM</string>
    <string name="editProfileTextViewPhoneContent">0978988999</string>

    <!--.........................Display list notifycation......................-->
    <string name="displayNotifycationScreenName">Thông báo</string>
    <string name="displayNotifycationCardViewContent">Nội dung thông báo</string>
    <string name="displayNotifycationCardViewDate">01/04/2019</string>

    <!--.........................View Report Malfuntion Screen......................-->
    <string name="viewreportmalfunctionScreenName">Xem phiếu báo cáo sự cố</string>
    <string name="viewreportmalfunctionHolderTextview_Masuco">Mã sự cố : </string>
    <string name="viewreportmalfunctionHolderTextview_Maphong">Mã phòng : </string>
    <string name="viewreportmalfunctionHolderTextview_Mathietbi">Mã thiết bị : </string>
    <string name="viewreportmalfunctionHolderTextview_Manhanvien">Mã nhân viên : </string>
    <string name="viewreportmalfunctionHolderTextview_Tennhanvien">Tên nhân viên : </string>
    <string name="viewreportmalfunctionHolderTextview_Noidung">Nội dung : </string>
    <string name="viewreportmalfunctionHolderTextview_Thoigian">Thời gian : </string>
    <string name="viewreportmalfunctionHintTextview_Masuco">(Hiển thị mã sự cố)</string>
    <string name="viewreportmalfunctionHintTextview_Maphong">(Hiển thị mã phòng)</string>
    <string name="viewreportmalfunctionHintTextview_Mathietbi">(Hiển thị mã thiết bị)</string>
    <string name="viewreportmalfunctionHintTextview_Manhanvien">(Hiển thị mã nhân viên)</string>
    <string name="viewreportmalfunctionHintTextview_Tennhanvien">(Hiển thị tên nhân viên)</string>
    <string name="viewreportmalfunctionHintTextview_Thoigian">(Hiển thị thời gian)</string>
    <string name="viewreportmalfunctionHintTextview_Noidung">(Nội dung sự cố)</string>

    <!--.........................Change pasword screen..........................-->
    <string name="changePasswordScreenName">Bảo mật và đăng nhập</string>
    <string name="changePasswordOldPass">Mật khẩu hiện tại...</string>
    <string name="changePasswordNewPass">Mật khẩu mới...</string>
    <string name="changePasswordConfirmPass">Gõ lại mật khẩu...</string>
    <string name="changePasswordBtnChangePass">Lưu thay đổi</string>
    <string name="changePasswordBtnCancelChangePass">Hủy</string>

    <!--.........................Area/Building Screen...........................-->
    <string name="areaBuildingScreenName">Khu vực/ tòa nhà</string>
    <string name="areaBuildingCardViewTextView">Khu vực</string>

    <!--........................List room screen..............................-->
    <string name="listRoomScreenName">Danh sách phòng học</string>
    <string name="listRoomScreenTextViewOfCardView">Phòng học</string>

    <!--.........................List Equipment Screen............................... -->
    <string name="ListEquipmentScreenNameScreen">Danh sách thiết bị</string>
    <string name="ListEquipmentScreenCardViewTextView">Tên thiết bị</string>

    <!--........................List computers.................................-->
    <string name="ListComputerScreenNameScreen">Danh sách máy</string>

    <!--........................Detail_Report_Screen.............................-->
    <string name="DetailReportScreenNameScreen">Chi tiết</string>
    <string name="DetailReportLabel_TimeBaoCao">Thời gian báo cáo : </string>
    <string name="DetailReportLabel_Masuco">Mã sự cố : </string>
    <string name="DetailReportLabel_Maphong">Mã phòng : </string>
    <string name="DetailReportLabel_Tenphong">Tên phòng : </string>
    <string name="DetailReportLabel_Mathietbi">Mã thiết bị : </string>
    <string name="DetailReportLabel_Manhanvien">Mã nhân viên : </string>
    <string name="DetailReportLabel_TennhanvienNhanSuaChua">Tên nhân viên khắc phục : </string>
    <string name="DetailReportLabel_ManhanvienNhanSuaChua">Mã nhân viên khắc phục: </string>
    <string name="DetailReportLabel_Tennhanvien">Tên nhân viên : </string>
    <string name="DetailReportLabel_Noidung">Nội dung : </string>
    <string name="DetailReportLabel_TimeSuaChua">Thời gian sửa chữa : </string>
    <string name="DetailReportLabel_Loidakhacphuc">Lỗi đã khắc phục : </string>
    <string name="DetailReportContent_TimeBaoCao">(Hiển thị thời gian)</string>
    <string name="DetailReportContent_Masuco">(Hiển thị mã sự cố)</string>
    <string name="DetailReportContent_Maphong">(Hiển thị Mã phòng)</string>
    <string name="DetailReportContent_Mathietbi">(Hiển thị Mã thiết bị)</string>
    <string name="DetailReportContent_Manhanvien">(Hiển thị Mã nhân viên) </string>
    <string name="DetailReportContent_Tennhanvien">(Hiển thị Tên nhân viên )</string>
    <string name="DetailReportContent_Noidung">(Hiển thị Nội dung )</string>
    <string name="DetailReportContent_TimeSuaChua">(Hiển thị Thời gian sửa chữa)</string>
    <string name="DetailReportContent_Loidakhacphuc">(Hiển thị Lỗi đã khắc phục)</string>

    <!--..........................History Screen.............................-->
    <string name="HistoryEditTextSearchHint">dd-mm-yy hh:mm:ss</string>
</resources>
