<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DetailReportScreenLinearlayout">

    <ScrollView
        android:id="@+id/myWorkScrollView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/myWWorkLinearlayoutContainContent"
            style="@style/DetailReportScreenLinearlayout">

            <LinearLayout style="@style/DetailReportScreen_Textview">

                <TextView
                    style="@style/DetailReportScreenTextview"
                    android:text="@string/DetailReportLabel_TimeBaoCao" />

                <TextView
                    android:id="@+id/detailMyWorkscreen_timebaocao"
                    style="@style/DetailReportScreenTextviewContent"
                    android:hint="@string/DetailReportContent_TimeBaoCao" />
            </LinearLayout>

            <LinearLayout style="@style/DetailReportScreen_Textview">

                <TextView
                    style="@style/DetailReportScreenTextview"
                    android:text="@string/DetailReportLabel_Masuco" />

                <TextView
                    android:id="@+id/detailMyWork_masuco"
                    style="@style/DetailReportScreenTextviewContent"
                    android:hint="@string/DetailReportContent_Masuco" />
            </LinearLayout>

            <LinearLayout style="@style/DetailReportScreen_Textview">

                <TextView
                    style="@style/DetailReportScreenTextview"
                    android:text="@string/DetailReportLabel_Maphong" />

                <TextView
                    android:id="@+id/ddetailMyWork_maphong"
                    style="@style/DetailReportScreenTextviewContent"
                    android:hint="@string/DetailReportContent_Maphong" />
            </LinearLayout>

            <LinearLayout style="@style/DetailReportScreen_Textview">

                <TextView
                    style="@style/DetailReportScreenTextview"
                    android:text="@string/DetailReportLabel_Mathietbi" />

                <TextView
                    android:id="@+id/detailMyWork_mathietbi"
                    style="@style/DetailReportScreenTextviewContent"
                    android:hint="@string/DetailReportContent_Mathietbi" />
            </LinearLayout>

            <LinearLayout style="@style/DetailReportScreen_Textview">

                <TextView
                    style="@style/DetailReportScreenTextview"
                    android:text="@string/DetailReportLabel_Manhanvien" />

                <TextView
                    android:id="@+id/detailMyWork_manhanvien"
                    style="@style/DetailReportScreenTextviewContent"
                    android:hint="@string/DetailReportContent_Manhanvien" />
            </LinearLayout>

            <LinearLayout style="@style/DetailReportScreen_Textview">

                <TextView
                    style="@style/DetailReportScreenTextview"
                    android:text="@string/DetailReportLabel_Tennhanvien" />

                <TextView
                    android:id="@+id/detailMyWork_tennhanvien"
                    style="@style/DetailReportScreenTextviewContent"
                    android:hint="@string/DetailReportContent_Tennhanvien" />
            </LinearLayout>

            <LinearLayout style="@style/DetailReportScreen_Textview">

                <TextView
                    style="@style/DetailReportScreenTextview"
                    android:text="@string/DetailReportLabel_Noidung" />

                <TextView
                    android:id="@+id/detailMyWork_noidung"
                    style="@style/DetailReportScreenTextviewContent"
                    android:hint="@string/DetailReportContent_Noidung" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detailReportLinnearLayoutLoiDaKhacPhuc"
                style="@style/DetailReportScreen_Textview"
                android:visibility="gone">

                <TextView
                    style="@style/DetailReportScreenTextview"
                    android:text="@string/DetailReportLabel_Loidakhacphuc" />

                <EditText
                    android:id="@+id/detailMyWork_loikhacphuc"
                    style="@style/DetailReportScreenTextviewContent"
                    android:hint="Nhập lỗi thực của thiết bị" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/myWWorkFloatButtonViewListMalfunction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_tick"
        app:layout_anchor="@+id/myWorkScrollView"
        app:layout_anchorGravity="bottom|right|end"
        android:backgroundTint="#00BCD4"
        app:backgroundTint="#00BCD4"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>