<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout style="@style/AppBarActionStyle">

        <androidx.appcompat.widget.Toolbar
            style="@style/ToolBarApp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left">
                <ImageView
                    android:id="@+id/editProfileToolBarBack"
                    style="@style/ToolBarRightOfAppBar"
                    android:src="@drawable/ic_back" />
            </LinearLayout>

            <TextView
                style="@style/AppBarLayoutTextViewScreenName"
                android:text="@string/changePasswordScreenName" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/changePasswordOldPass"
            android:inputType="textPassword"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/changePasswordNewPass"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/changePasswordConfirmPass"
            android:inputType="textPassword"
            android:textSize="15sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/change_password_selector_btnsave"
            android:elevation="15dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/changePasswordBtnChangePass"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/change_password_selector_btncancel"
            android:elevation="15dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/changePasswordBtnCancelChangePass"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>